--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-            <img src="./generation.jpg" alt="" width="50px" height="50px" class="img-fluid rounded-circle"> <!--img-fluid , vai deixar minha imagem resposiva-->
+            <img src="assets/img/generation.jpg" alt="" width="50px" height="50px" class="img-fluid rounded-circle"> <!--img-fluid , vai deixar minha imagem resposiva-->
         </li>
         <li class="nav-item pl-3">
             <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário </p>
