Implementação das rotas

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -48,8 +48,8 @@
                         
                         <!-- Vou colocar os botões dentro de uma div, para poder centralizar eles-->
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success mr-4">Cadastrar</button>
-                            <button type="submit" class="btn  btn-danger ">Cancelar</button>
+                            <button type="submit" class="btn  btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
+                            <button type="submit" class="btn btn-success " >Cadastrar</button>
                             <!-- Os meus botões ficam grudados, pq?  -->
                         </div>
                     </div>
