--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
+
+<router-outlet></router-outlet>
 <!--<app-menu></app-menu>
 
 <app-rodape></app-rodape> 
 
 <app-entrar></app-entrar> 
--->
-<app-cadastrar></app-cadastrar> 
+
+<app-cadastrar></app-cadastrar> -->
 
 
