--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -25,7 +25,7 @@
                         <hr class="mt-5 mb-5">
 
                         <p class="text-center">
-                            Não tem uma conta? <a href="Cadastre-se"></a>
+                            Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se"></a> <!-- Toda vez que eu clientr em cadastre-se , lee vai para rota cadastrar por conta do RouterLink -->
                         </p>
 
                 </div>
