Rotas de entrar e cadastrar criadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 <!--<app-menu></app-menu>
 
 <app-rodape></app-rodape> 
@@ -8,4 +8,5 @@
 
 <app-cadastrar></app-cadastrar> -->
 
+<app-menu></app-menu>
 
