--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -27,6 +27,13 @@
                             <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto"> 
                         </div>
 
+                        <!--Fiz vom o priofessor vai vir a aula-->
+                        <div class="form-group">
+                            <label for="dataNascimento">Data de nascimento </label>
+                            <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" placeholder="dd/mm/aaaa"> 
+                        </div>
+                        <!--Fiz vom o priofessor vai vir a aula-->
+
                         <div class="form-group">
                             <label for="senha">Senha</label>
                             <input class="form-control" type="password" name="senha" id="senha" placeholder="Seu senha"> 
