--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 
-<!--<router-outlet></router-outlet>-->
-<!--<app-menu></app-menu>
+
+<app-menu></app-menu>
+
+<router-outlet></router-outlet>
 
 <app-rodape></app-rodape> 
 
-<app-entrar></app-entrar> 
+<!--<app-entrar></app-entrar> 
 
 <app-cadastrar></app-cadastrar> -->
 
-<app-menu></app-menu>
+
 
