--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -14,39 +14,39 @@
 
                         <div class="form-group">
                             <label for="nome">Nome</label>
-                            <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome"> 
+                            <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome" > 
                         </div>
 
                         <div class="form-group">
                             <label for="usuario">Usuário</label>
-                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"> 
+                            <input [(ngModel])='user.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"> 
                         </div>
 
                         <div class="form-group">
                             <label for="foto">Link da Foto</label>
-                            <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto"> 
+                            <input [(ngModel])='user.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto"> 
                         </div>
 
                         <!--Fiz vom o priofessor vai vir a aula-->
                         <div class="form-group">
                             <label for="dataNascimento">Data de nascimento </label>
-                            <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" placeholder="dd/mm/aaaa"> 
+                            <input [(ngModel])='user.dataNascimento' class="form-control" type="date" name="dataNascimento" id="dataNascimento" placeholder="dd/mm/aaaa"> 
                         </div>
                         <!--Fiz vom o priofessor vai vir a aula-->
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input class="form-control" type="password" name="senha" id="senha" placeholder="Seu senha"> 
+                            <input(input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Seu senha"> 
                         </div>
 
                         <div class="form-group">
                             <label for="ConfirmSenha">Confirmar Senha</label>
-                            <input class="form-control" type="password" name="ConfirmSenha" id="ConfirmSenha" placeholder="Confirme sua Senha">
+                            <input [(ngModel])='userlogin.senha' class="form-control" type="password" name="ConfirmSenha" id="ConfirmSenha" placeholder="Confirme sua Senha">
                         </div>
                         
                         <div class="form-group">
                             <label for="tipo">Tipo de Usuário</label>
-                            <select class="form-control" name="tipo" id="tipo">
+                            <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'> 
                                 <option>Selecione um tipo de usuário: </option>
                                 <option value="normal">Normal</option>
                                 <option value="adm">Administrador </option>
@@ -56,7 +56,7 @@
                         <!-- Vou colocar os botões dentro de uma div, para poder centralizar eles-->
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn  btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
-                            <button type="submit" class="btn btn-success " >Cadastrar</button>
+                            <button type="submit" class="btn btn-success" (click)='Cadastrar()'>Cadastrar</button>
                             <!-- Os meus botões ficam grudados, pq?  -->
                         </div>
                     </div>
@@ -72,8 +72,8 @@
 
 
 
-<!-- Os meus botões ficam grudados, pq?  -->
-<!--  -->
+
+<!-- console log -->
 <!--  -->
 <!--  -->
 <!--  -->
