--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -10,16 +10,16 @@
                         <!-- Todo código que estiver com um asteristico representa o código da caixa que o usuario precisa digitar se nome. E ela precisa estar dentro desse <h1>-->
                         <div class="form-group"><!-- * -->
                             <label for="usuario">Usuário</label><!-- * -->
-                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"> <!-- * -->
+                            <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"> <!-- * -->
                         </div>
 
                         <div class="form-group">
-                            <label for="usuario">Senha</label>
-                            <input class="form-control" type="password" name="usuario" id="usuario" placeholder="Sua senha">
+                            <label for="senha">Senha</label>
+                            <input  [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                         </div>
                         <!--Questionar o PROFESSOR, o pq de não ocorrer o espaçamento de forma automatica. -->
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success">Entrar</button>
+                            <button type="submit" class="btn btn-success" (click)='entrar()' >Entrar</button>
                         </div>
 
                         <hr class="mt-5 mb-5">
