--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,15 +1,15 @@
 #img-bg{
-    background-image: url(../../assets/img/pc.jpg); /* referencia a imagem para a pagina */
+    background-image: url(../../assets/img/pc.jpg); /* referencia a imagem para a pagina html */
 
-    min-height: 695px; /*  */
+    min-height: 695px; /* temanho certo da tela */
 
     background-position: center; /* Centraliza a imagem */
-    background-repeat: no-repeat; /*  */
+    background-repeat: no-repeat; /* não repetir imagem */
     background-size: cover; /* Preencher todo espaço que tem com a imagem */
 }
 
 
-/* Pq a imagem está no lado direto, questionar o prefessor, ficou confuso */
+/*  */
 
 /*  */
 
