--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,7 +1,8 @@
-.fs-54{
+/* Esse dois código a baixo foram tranferidos para style.css que é global */
+/* .fs-54{
     font-size: 54pt;
 }
 
 .fs-18{
     font-size: 18pt;
-}
+} */ 
