--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,11 @@ html
 {
     scroll-behavior: smooth;  /* Quer dizer que toda minha tela vai rolar de forma suave. */
 }
+
+.fs-54{
+    font-size: 54pt;
+}
+
+.fs-18{
+    font-size: 18pt;
+}
