--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,21 @@
 
 <!--<app-rodape *ngIf='auth.logado()'></app-rodape>--> <!--Agora o menu e rodapé só vai aparece quando meu usuario estiver logado e só estará logado qnd o token for diferente de vazio. -->
 <app-menu></app-menu>
-<app-tema></app-tema>
+<app-tema-edit></app-tema-edit>
+
+
+<!-- <app-tema></app-tema>-->
 <app-rodape></app-rodape>
+
+
 
 <!--
 <app-cadastrar></app-cadastrar> 
 
 <app-inicio></app-inicio>
-<app-entrar></app-entrar> 
- 
+<app-entrar></app-entrar>
+
+
 -->
 
 
